--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
                           <p> <b>April 8</b> : The <a href="https://www.kaggle.com/competitions/4-dmr-ijcai-workshop-challenge-2025" target="_blank">Kaggle website</a> of 4DMR challenge is available, the training & resource data will be released in few days.</p>
                         </div>
 
+                        <div class="refer-cov">
+                          <p>
+                            <b>May 14</b> : The final test submission deadline is extended to 
+                            <span style="color: #e74c3c;">May 22</span>. Final leaderboard scoring will be released on 
+                            <span style="color: #e74c3c;">May 20</span>.
+                          </p>
+                        </div>
+
                           <!--
 
                          <div class="refer-cov">
@@ -482,7 +490,8 @@
                         <li style="list-style: disc;">April 10, 2025: Training and resource data released.</li>
                         <li style="list-style: disc;"><b>May 4, 2025</b>: Team registration deadline.</li>
                         <li style="list-style: disc;">May 7, 2025: Testing data released.</li>
-                        <li style="list-style: disc;"><b>May 17, 2025</b>: Final test submission deadline.</li>
+                        <li style="list-style: disc; color: red;">May 20, 2025: Final leaderboard scoring released.</li>
+                        <li style="list-style: disc; color: red;"><b><span style="color: red;"><del>May 17, 2025</del> May 22, 2025</span></b>: Final test submission deadline.</li>
                         <li style="list-style: disc;">May 24, 2025: Challenge results announced.</li>
                         <li style="list-style: disc;"><b>May 31, 2025</b>: Paper submission deadline.</li>
                         <li style="list-style: disc;">June 6, 2025: Notification to authors.</li>
