update submission link

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
                           </p>
                         </div>
 
+                        <div class="refer-cov">
+                          <p>
+                            <b>May 30</b> : The paper <a href="https://easychair.org/conferences/?conf=fourdmer2025
+                            " target="_blank">submission link </a> has been updated. 
+                          </p>
+                        </div>
                           <!--
 
                          <div class="refer-cov">
@@ -371,7 +377,7 @@
                                         </ul>
                                       </li>
                                       <li style="list-style: disc;">Accepted papers will be included in a volume of the <a href="https://ceur-ws.org/">CEUR Workshop Proceedings</a> (EI-index, JUFO1).</li>
-                                      <li style="list-style: disc;">The <b>submission link</b> is as follow: <span style="color: red;">TBD</span></li>
+                                      <li style="list-style: disc;">The <b>submission link</b> is as follow: <a href="https://easychair.org/conferences/?conf=fourdmer2025">https://easychair.org/conferences/?conf=fourdmer2025</a></li>
                                       <li style="list-style: disc;"><b>At least one of the authors of accepted papers should register for the IJCAI 2025 workshop and be present onsite at the workshop.</b></li>
                                     </div>
                                     </ul>
