update paper length

--- a/index.html
+++ b/index.html
@@ -364,8 +364,15 @@
                                      <!-- <span style="color: red;">TBD</span> -->
                                      <ul>
                                       <div style="margin-left: 20px; text-align: justify;">
-                                      <li style="list-style: disc;">Papers must comply with <a href="https://ceur-ws.org/HOWTOSUBMIT.html/">CEURART paper style</a> and paper length should be less than 7 pages.</li>
-                                      <li style="list-style: disc;">The CEURART template can be found on this <a href="https://it.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw/">Overleaf link.</a></li>
+                                     <li style="list-style: disc;">Papers must comply with <a href="https://ceur-ws.org/HOWTOSUBMIT.html/">CEURART paper style</a>, and the page limits are as follows: 
+                                      <ul>
+                                        <div style="margin-left: 20px; text-align: justify;">
+                                        <li style="list-style: disc; color: blue;">Long paper: At least 10 pages (including references)<br>
+                                        <li style="list-style: disc; color: blue;">Short paper: 5–9 pages (including references)<br>
+                                      </div>
+                                      </ul>
+                                    </li>
+                                    <li style="list-style: disc;">The CEURART template can be found on this <a href="https://it.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw/">Overleaf link.</a></li>
                                       <li style="list-style: disc;">The review process is <b>double-blind</b>. Please do not include your identity information in your submitted paper.</li>
                                       <li style="list-style: disc;">
                                         There are two tracks (challenge track and workshop track) for the paper submission.
