entend submission ddl to June 13

--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
                             " target="_blank">submission link </a> has been updated. 
                           </p>
                         </div>
+
+                        <div class="refer-cov">
+                          <p>
+                            <b>June 5</b> : The paper submission deadline is extended to 
+                            <span style="color: #e74c3c;">June 13</span>. 
+                          </p>
+                        </div>
                           <!--
 
                          <div class="refer-cov">
@@ -409,7 +416,7 @@
                                     
                                     <ul>
                                       <div style="margin-left: 20px; text-align: justify;">
-                                      <li style="list-style: disc; color: red;"><b><span style="color: red;"><del>May 31, 2025</del> June 10</span></b>: Paper submission deadline.</li>
+                                      <li style="list-style: disc; color: red;"><b><span style="color: red;"><del>May 31, 2025</del> <del>June 10</del> June 13, 2025</span></b>: Paper submission deadline.</li>
                                       <li style="list-style: disc;"> June 6: Notification to authors</li>
                                       <li style="list-style: disc;">June 13: Camera-ready deadline</li>
                                     </div>
