add registration info

--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
                                       <li style="list-style: disc;">Accepted papers will be included in a volume of the <a href="https://ceur-ws.org/">CEUR Workshop Proceedings</a> (EI-index, JUFO1).</li>
                                       <li style="list-style: disc;">The <b>submission link</b> is as follow: <a href="https://easychair.org/conferences/?conf=fourdmer2025">https://easychair.org/conferences/?conf=fourdmer2025</a></li>
                                       <li style="list-style: disc;"><b>At least one of the authors of accepted papers should register for the IJCAI 2025 workshop and be present onsite at the workshop.</b></li>
+                                      <li style="list-style: disc;">For IJCAI 2025 registration information, please refer to the following link: <a href="https://2025.ijcai.org/registration/" target="_blank">https://2025.ijcai.org/registration/</a></li>
                                     </div>
                                     </ul>
 
