change workshop date to August 29th

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="col-md-10 tit-det">
                           <h2>The 1st Challenge and Workshop for 4D Micro-Expression Recognition for Mind Reading (4DMR) </h2>
-                          <p> To be held at IJCAI 2025, 16th-22nd August 2025, Montreal, Canada & Guangzhou, China </p>
+                          <p> To be held at IJCAI 2025, 29th August 2025, Montreal, Canada & Guangzhou, China </p>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                             <li><i class="fas fa-plane-departure"></i> <br>Travel</li>
                             <li><i class="fas fa-gamepad"></i> <br> Games</li>
                         </ul> -->
-                          <p>We jointly hold the first workshop and challenges for 4D Micro-Expression Recognition for Mind Reading (4DMR) at IJCAI 2025, 16th-22nd August 2025.</p>
+                          <p>We jointly hold the first workshop and challenges for 4D Micro-Expression Recognition for Mind Reading (4DMR) at IJCAI 2025, 29th August 2025.</p>
 
                           <p>We warmly welcome your contribution and participation! </p>
 
@@ -152,6 +152,13 @@
                             <span style="color: #e74c3c;">June 13</span>. 
                           </p>
                         </div>
+                        
+                        <div class="refer-cov">
+                          <p>
+                            <b>July 23</b> : The workshop date has been changed to <span style="color: #e74c3c;">August 29th</span>.
+                          </p>
+                        </div>
+
                           <!--
 
                          <div class="refer-cov">
@@ -169,7 +176,7 @@
                           <h2 class="rit-titl" > Overview</h2>
 
 
-                          <p>  We hold the 1st 4DMR Workshop & Challenge to <b>explore the application of 4D technologies in facial expression analysis</b>, to be held at IJCAI 2025,  16th-22nd August 2025, Montreal, Canada & Guangzhou, China.
+                          <p>  We hold the 1st 4DMR Workshop & Challenge to <b>explore the application of 4D technologies in facial expression analysis</b>, to be held at IJCAI 2025,  29th August 2025, Montreal, Canada & Guangzhou, China.
                           </p>
 
                            <p>
@@ -532,7 +539,7 @@
                         <li style="list-style: disc;">May 24, 2025: Challenge results announced.</li>
                         <li style="list-style: disc; color: red;"><b><span style="color: red;"><del>May 31, 2025</del> June 10</span></b>: Paper submission deadline.</li>
                         <li style="list-style: disc;">June 6, 2025: Notification to authors.</li>
-                        <li style="list-style: disc;">August 16-22, 2025: 4DMR IJCAI 2025 Workshop, Montreal & Guangzhou.</li>
+                        <li style="list-style: disc;">August 29, 2025: 4DMR IJCAI 2025 Workshop, Montreal & Guangzhou.</li>
                         </div>
                     </ul>
 </div>
